--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
       uses: docker://google/cloud-sdk:latest
       with:
         entrypoint: /bin/sh
-        args: -c |
-          gcloud auth activate-service-account --key-file=<(echo "$GCP_SERVICE_KEY") \
-          && gcloud auth configure-docker \
-          && gcloud config set project $GCP_PROJECT_ID
+        args: >
+          -c 'gcloud auth activate-service-account --key-file=<(echo "$GCP_SERVICE_KEY") &&
+              gcloud auth configure-docker &&
+              gcloud config set project $GCP_PROJECT_ID'
 
       env:
         GCP_SERVICE_KEY: ${{ secrets.GCP_SERVICE_KEY }}
@@ -36,7 +36,8 @@ jobs:
 
       env:
         GCP_SERVICE_KEY: ${{ secrets.GCP_SERVICE_KEY }}
-        
+        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+
     - name: Deploy to GKE
       run: |
         gcloud container clusters get-credentials k8s-testing --region us-central1
