--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,9 @@ jobs:
       with:
         entrypoint: /bin/sh
         args: >
-          -c 'gcloud auth activate-service-account --key-file=<(echo "$GCP_SERVICE_KEY") &&
+          -c "gcloud auth activate-service-account --key-file=<(echo \"$GCP_SERVICE_KEY\") &&
               gcloud auth configure-docker &&
-              gcloud config set project $GCP_PROJECT_ID'
-
+              gcloud config set project $GCP_PROJECT_ID"
       env:
         GCP_SERVICE_KEY: ${{ secrets.GCP_SERVICE_KEY }}
 
