--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ jobs:
 
     - name: Authenticate with Google Cloud
       run: |
-        gcloud auth activate-service-account --key-file=(echo "$GCP_SERVICE_KEY") &&
+        gcloud auth activate-service-account --key-file="$GCP_SERVICE_KEY" &&
         gcloud auth configure-docker &&
-        gcloud config set project $GCP_PROJECT_ID'
+        gcloud config set project $GCP_PROJECT_ID
       env:
         GCP_SERVICE_KEY: ${{ secrets.GCP_SERVICE_KEY }}
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
