--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Authenticate with Google Cloud
       run: |
-        gcloud auth activate-service-account --key-file="$GCP_SERVICE_KEY" &&
+        gcloud auth activate-service-account --key-file= $GCP_SERVICE_KEY &&
         gcloud auth configure-docker &&
         gcloud config set project $GCP_PROJECT_ID
       env:
