--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,15 @@ jobs:
 
     - name: Authenticate with Google Cloud
       run: |
-        gcloud auth activate-service-account --key-file= $GCP_SERVICE_KEY &&
+        echo "$GCP_SERVICE_KEY" > /tmp/gcp_key.json &&
+        gcloud auth activate-service-account --key-file=/tmp/gcp_key.json &&
         gcloud auth configure-docker &&
         gcloud config set project $GCP_PROJECT_ID
+        
       env:
         GCP_SERVICE_KEY: ${{ secrets.GCP_SERVICE_KEY }}
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-        
+
     - name: Build and push Docker image to GCR
       run: |
         docker build -t gcr.io/$GCP_PROJECT_ID/your-image-name:$GITHUB_SHA .
