--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,14 +34,7 @@ jobs:
 
     - name: Deploy to GKE
       run: |
-        # Create GKE cluster with minimum vCPUs and SSD_TOTAL_GB
-        gcloud container clusters create k8s-testing \
-          --region=us-central1 \
-          --num-nodes=1 \
-          --machine-type=e2-micro
-          --local-ssd-count=1
-          
-        gcloud container clusters get-credentials k8s-testing --region=us-central1
+        gcloud container clusters get-credentials autopilot-cluster-1 --region=us-central1
     
         # Get the Docker image URL from the file
         IMAGE_URL=$(cat image_url.txt)
