--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         IMAGE_URL=gcr.io/$GCP_PROJECT_ID/your-image-name:$GITHUB_SHA
         docker build -t $IMAGE_URL .
         docker push $IMAGE_URL
+        echo "Docker image URL: $IMAGE_URL"
         echo "Docker image URL: $IMAGE_URL" >> image_url.txt
 
     - name: Deploy to GKE
