--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,13 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-
+    
+    - name: Install gke-gcloud-auth-plugin
+      run: |
+        curl -L -o gke-gcloud-auth-plugin https://dl.k8s.io/release/v1.22.0/bin/linux/amd64/kubectl-credential-gke && \
+        chmod +x gke-gcloud-auth-plugin && \
+        sudo mv gke-gcloud-auth-plugin /usr/local/bin/
+    
     - name: Authenticate with Google Cloud
       run: |
         echo "$GCP_SERVICE_KEY" > /tmp/gcp_key.json &&
