--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
   
     - name: Install gke-gcloud-auth-plugin
       run: |
-        sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
+        gcloud components install gke-gcloud-auth-plugin
+
 
     - name: Deploy to GKE
       run: |
