--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,7 @@ jobs:
   
     - name: Install gke-gcloud-auth-plugin
       run: |
-        gcloud components install gke-gcloud-auth-plugin
-
+        sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
 
     - name: Deploy to GKE
       run: |
