--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,10 @@ jobs:
   
     - name: Install gke-gcloud-auth-plugin
       run: |
-        sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
-
+        curl -L -o gke-gcloud-auth-plugin https://dl.k8s.io/release/v1.22.0/bin/linux/amd64/kubectl-credential-gke && \
+        chmod +x gke-gcloud-auth-plugin && \
+        sudo mv gke-gcloud-auth-plugin /usr/local/bin/
+    
     - name: Deploy to GKE
       run: |
         gcloud container clusters get-credentials autopilot-cluster-1 --region=us-central1
